# ProgectLibrary

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: dependencies.py  main.py
app/core/: audit.py  config.py  crypto.py  logger.py  security.py
app/models/: book.py  borrow.py  user.py
app/repositories/: base.py  book_repo.py  borrow_repo.py  user_repo.py
app/routers/: admin.py  auth.py  books.py  borrows.py  users.py
app/services/: book_service.py  borrow_service.py  notification_service.py  user_service.py
frontend/: index.html  style.css
scripts/: generate_keys.py  seed_admin.py
tests/: conftest.py  test_audit.py  test_auth_router.py  test_book_service.py  test_borrow_service.py  test_crypto.py  test_notification_service.py  test_user_service.py
