[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__init__.py"]

[project]
name = "library-system"
version = "0.1.0"
description = "OOP library management system with FastAPI"
requires-python = ">=3.11"
